修改 网页文案

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <span class="hero-eyebrow">AI × Android 开发生态</span>
         <h1>将智能体验带到移动端，让 AI 真正落地。</h1>
         <p class="hero-lead">
-          我是文凯，一名 Android 工程师与 AI 实践者，专注于将机器学习能力嵌入应用中，打造端侧智能与云端协同的体验。
+          我是王康，一名 Android 工程师与 AI 实践者，专注于将机器学习能力嵌入应用中，打造端侧智能与云端协同的体验。
           在这里记录我的项目、研究路线及落地实践。
         </p>
         <div class="hero-actions">
@@ -344,8 +344,7 @@
       <p>© 2025 WK1995 · Inspired by the future of AI on Android</p>
       <p>
         <a href="https://github.com/wk1995" target="_blank" rel="noopener">GitHub</a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="mailto:wk@example.com">wk@example.com</a>
+        <a href="kangw1995@gmail.com">kangw1995@gmail.com</a>
       </p>
     </div>
   </footer>
